Added CSS styles to header,nav,intro

--- a/index.html
+++ b/index.html
@@ -8,23 +8,31 @@
 <body>
 <h1>Bitmaker Photo Gallery</h1>
 
-<nav class="toolbar">
-  <a href="#">Home</a>
-  <a href="#">Add a Photo</a>
-  <a href="">About</a>
-</nav>
-
 <div>
-  <p> There are 6 photos</p>
+  <ul class ="nav">
+  <li><a href="#">Home</a></li>
+  <li><a href="#">Add a Photo</a></li>
+  <li><a href="#">About</a></li>
+  </ul>
+</div>
+
+<div class="intro">
+  <p> There are <b>6</b> photos</p>
 </div>
 
 <div class="images">
-  <img src="http://lorempixel.com/480/640/city/" alt="">
-  <img src="http://lorempixel.com/480/640/city/" alt="">
-  <img src="http://lorempixel.com/480/640/city/" alt="">
-  <img src="http://lorempixel.com/480/640/city/" alt="">
-  <img src="http://lorempixel.com/480/640/city/" alt="">
-  <img src="http://lorempixel.com/480/640/city/" alt="">
+  <table>
+    <tr>
+    <td><img src="http://lorempixel.com/300/400/city/" alt=""><a href="#">Edit|Delete</a></td>
+    <td><img src="http://lorempixel.com/300/400/city/" alt=""><a href="#">Edit|Delete</a></td>
+    <td><img src="http://lorempixel.com/300/400/city/" alt=""><a href="#">Edit|Delete</a></td>
+    </tr>
+    <tr>
+    <td><img src="http://lorempixel.com/300/400/city/" alt=""><a href="#">Edit|Delete</a></td>
+    <td><img src="http://lorempixel.com/300/400/city/" alt=""><a href="#">Edit|Delete</a></td>
+    <td><img src="http://lorempixel.com/300/400/city/" alt=""><a href="#">Edit|Delete</a></td>
+    </tr>
+    </table>
 </div>
 <footer class="copyright">
   <p> @ Bitmaker 2016</p>
