Added styling forimages

--- a/index.html
+++ b/index.html
@@ -15,25 +15,49 @@
   <li><a href="#">About</a></li>
   </ul>
 </div>
-
+<main>
 <div class="intro">
   <p> There are <b>6</b> photos</p>
 </div>
 
-<div class="images">
-  <table>
-    <tr>
-    <td><img src="http://lorempixel.com/300/400/city/" alt=""><a href="#">Edit|Delete</a></td>
-    <td><img src="http://lorempixel.com/300/400/city/" alt=""><a href="#">Edit|Delete</a></td>
-    <td><img src="http://lorempixel.com/300/400/city/" alt=""><a href="#">Edit|Delete</a></td>
-    </tr>
-    <tr>
-    <td><img src="http://lorempixel.com/300/400/city/" alt=""><a href="#">Edit|Delete</a></td>
-    <td><img src="http://lorempixel.com/300/400/city/" alt=""><a href="#">Edit|Delete</a></td>
-    <td><img src="http://lorempixel.com/300/400/city/" alt=""><a href="#">Edit|Delete</a></td>
-    </tr>
-    </table>
+<div class="image">
+  <img src="http://lorempixel.com/250/300/city/" alt="">
+  <div class="edit">
+    <a href="#">Edit</a> | <a href="#">Delete</a>
+  </div>
 </div>
+<div class="image">
+  <img src="http://lorempixel.com/250/300/city/" alt="">
+  <div class="edit">
+    <a href="#">Edit</a> | <a href="#">Delete</a>
+  </div>
+</div>
+<div class="image">
+  <img src="http://lorempixel.com/250/300/city/" alt="">
+  <div class="edit">
+    <a href="#">Edit</a> | <a href="#">Delete</a>
+  </div>
+</div>
+<div class="image">
+  <img src="http://lorempixel.com/250/300/city/" alt="">
+  <div class="edit">
+    <a href="#">Edit</a> | <a href="#">Delete</a>
+  </div>
+</div>
+<div class="image">
+  <img src="http://lorempixel.com/250/300/city/" alt="">
+  <div class="edit">
+    <a href="#">Edit</a> | <a href="#">Delete</a>
+  </div>
+</div>
+<div class="image">
+  <img src="http://lorempixel.com/250/300/city/" alt="">
+  <div class="edit">
+    <a href="#">Edit</a> | <a href="#">Delete</a>
+  </div>
+</div>
+
+</main>
 <footer class="copyright">
   <p> @ Bitmaker 2016</p>
 </footer>
